--- a/tg-front/public/index.html
+++ b/tg-front/public/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Это EatSmart, твой личный ИИ-гуру питания" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <title>EatSmart</title>
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
